--- a/packages/utils/file/package.json
+++ b/packages/utils/file/package.json
@@ -3,9 +3,7 @@
   "version": "2.0.2",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": [
-    "lib"
-  ],
+  "files": ["lib"],
   "dependencies": {
     "@jameslnewell/cancelable-promise": "^1.0.2",
     "@types/anymatch": "^1.3.0",
@@ -13,7 +11,7 @@
     "@types/del": "^3.0.0",
     "@types/fs-extra": "^5.0.3",
     "@types/node": "^6.0.102",
-    "anymatch": "^1.3.0",
+    "anymatch": "^2.0.0",
     "chokidar": "^1.7.0",
     "del": "^3.0.0",
     "finder-on-steroids": "^1.0.3",
