--- a/packages/utils/yarn/package.json
+++ b/packages/utils/yarn/package.json
@@ -1,9 +1,11 @@
 {
   "name": "@tradie/yarn-utils",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
-  "files": ["lib"],
+  "files": [
+    "lib"
+  ],
   "dependencies": {
     "@types/node": "^10.3.3",
     "find-and-read-package-json": "^2.0.2"
