--- a/packages/utils/typescript/package.json
+++ b/packages/utils/typescript/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@tradie/typescript-utils",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
     "lib"
   ],
+  "peerDependencies": {
+    "typescript": "^2.0.0 || ^3.0.0"
+  },
   "dependencies": {
     "@tradie/file-utils": "^2.1.0",
-    "@tradie/reporter-utils": "^2.1.2",
-    "flowgen": "^1.2.2",
-    "typescript": "^2.7.2"
+    "@tradie/reporter-utils": "^2.1.2"
   },
   "scripts": {
     "clean": "node-scripts clean",
