--- a/packages/utils/babel/package.json
+++ b/packages/utils/babel/package.json
@@ -1,14 +1,22 @@
 {
   "name": "@tradie/babel-utils",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib"
   ],
   "dependencies": {
-    "babel-core": "^6.24.1",
-    "chalk": "^2.4.1",
-    "fs-extra": "^6.0.1"
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
+    "@types/babel__core": "^7.0.1",
+    "fs-extra": "^7.0.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-typescript": "^7.0.0",
+    "@babel/preset-env": "^7.0.0"
   },
   "scripts": {
     "clean": "node-scripts clean",
