feat: refactor reusable tsconfig

--- a/packages/scripts/node/package.json
+++ b/packages/scripts/node/package.json
@@ -6,7 +6,8 @@
   "files": [
     "lib",
     "tpl",
-    "tsconfig.json"
+    "tsconfig.json",
+    "tslint.json"
   ],
   "bin": {
     "node-scripts": "lib/index.js"
