--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+git:
+  depth: false
+
 language: node_js
 node_js:
   - 8
@@ -11,6 +14,6 @@ install:
   - yarn run bootstrap
 
 script:
-  - ./node_modules/.bin/commitlint --from=HEAD~1
   - yarn run build
   - yarn run test
+  - if [ "$TRAVIS_BRANCH" = "master" ]; then $(yarn bin)/publish-if-not-published; fi
