--- a/packages/preset/component/package.json
+++ b/packages/preset/component/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tradie/component-config",
+  "name": "@tradie/component-preset",
   "version": "1.0.0",
   "repository": "jameslnewell/tradie-v4",
   "main": "lib/index.js",
@@ -8,14 +8,13 @@
     "lib"
   ],
   "dependencies": {
-    "@types/html-webpack-plugin": "^2.30.3",
-    "@types/loader-utils": "^1.1.3",
-    "@types/webpack": "^4.4.4",
-    "@tradie/yarn-utils": "^2.0.0",
-    "find-and-read-package-json": "^2.0.2",
-    "html-webpack-plugin": "^3.2.0",
-    "ts-jest": "^23.0.1",
-    "ts-loader": "^4.4.2"
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
+    "babel-jest": "^23.4.2",
+    "tslint-config-prettier": "^1.15.0"
   },
   "scripts": {
     "clean": "node-scripts clean",
