--- a/packages/preset/component/package.json
+++ b/packages/preset/component/package.json
@@ -12,8 +12,10 @@
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.0.0",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^23.6.0",
+    "babel-core": "^7.0.0-0",
     "tslint-config-prettier": "^1.15.0"
   },
   "scripts": {
