--- a/packages/scripts/component/package.json
+++ b/packages/scripts/component/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tradie/component-scripts",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "repository": "jameslnewell/tradie-v4",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -12,11 +12,21 @@
     "component-scripts": "lib/index.js"
   },
   "dependencies": {
-    "@types/yargs": "^11.0.0",
-    "yargs": "^11.0.0",
     "@tradie/component-preset": "^1.0.0",
     "@tradie/jest-utils": "^4.0.0",
-    "@tradie/reporter-utils": "^2.1.2"
+    "@tradie/reporter-utils": "^2.1.2",
+    "@tradie/rollup-utils": "^2.0.0",
+    "@types/yargs": "^11.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-commonjs": "^9.1.6",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup-plugin-replace": "^2.0.0",
+    "yargs": "^11.0.0"
   },
   "scripts": {
     "clean": "node-scripts clean",
