--- a/packages/utils/rollup/package.json
+++ b/packages/utils/rollup/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@tradie/rollup-utils",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
-    "lib",
-    ".flowconfig"
+    "lib"
   ],
   "dependencies": {
-    "rollup": "^0.45.2"
+    "@tradie/reporter-utils": "^2.1.2",
+    "rollup": "^0.65.2"
   },
   "scripts": {
     "clean": "node-scripts clean",
